# ecs7search

./: .gitignore  LICENSE  QWEN.md  README.md  app.py  main.py  promt.md  promt_pdf.md  pyproject.toml
.qwen/: settings.json
data/: IO_list.xlsx  io_list.json  mimics_index.json  pdf_index.json
data/mimics/: bm1_ballcharger_popup_01.g  bm1_interloks_popup_01.g  bm2_ballcharger_popup_01.g  bm2_traps_popup_01.g  concept_ball_mill.g  concept_cyclon151.g  concept_knelson_192.g  concept_knelson_193.g  concept_oilst_bm1_popup_01.g  concept_oilst_bm2_popup_01.g  concept_oilst_bm2_popup_02.g  concept_pump_140_141_142_popup_01.g  concept_pump_180_181_182_popup_01.g  concept_pump_355_356_popup.g  concept_pump_840_842_popup_01.g  concept_pump_841_843_popup_01.g  pavlik_040il200a01_popup_01.g  pavlik_040il210a01_popup_01.g  pavlik_080tn590_new_popup.g  pavlik_10cr10a01_popup_01.g  pavlik_10cr10a01_popup_01_01.g  pavlik_905rp100a01_popup_01.g  pavlik_991_config_01.g  pavlik_991_config_02.g  pavlik_991_group_01.g  pavlik_991_group_03.g  pavlik_991_group_04.g  pavlik_991_mimic_01.g  pavlik_991_mimic_02.g  pavlik_991_mimic_03.g  pavlik_991_mimic_06.g  pavlik_991_mimic_08.g  pavlik_991_mimic_09.g  pavlik_991_mimic_11_local.g  pavlik_991_mimic_12.g  pavlik_991_mimic_13.g  pavlik_991_mimic_13_hd.g  pavlik_991_mimic_15.g  pavlik_992_config_02.g  (+31 more)
templates/: base.html  index.html  settings.html
utils/: config_service.py  ecs2json.py  index_mimics.py  indexing_service.py  iolist_indexer.py  mimic_indexer.py  mimic_searcher.py  pdf_indexer.py  pdf_service.py  repository.py  service.py
(+118 files in other folders)
