[project]
name = "ecs7search"
version = "0.1.0"
description = "SCADA ECS7 Mimic Files Search Tool — Web UI"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "pandas>=2.0",
    "openpyxl>=3.0",
    "pymupdf>=1.24",
]

[project.scripts]
ecs7search-web = "app:main"
